--- a/Softwarehouse/Business/Business.csproj
+++ b/Softwarehouse/Business/Business.csproj
@@ -39,6 +39,12 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SendGrid, Version=9.8.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sendgrid.9.9.0\lib\net452\SendGrid.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IAsyncService.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IService.cs" />
     <Compile Include="Models\SoftwarehouseDB\AdminUsers.cs" />
@@ -69,6 +76,7 @@
     <Compile Include="Services\MemberEmailRepeatService.cs" />
     <Compile Include="Services\MemberLoginService.cs" />
     <Compile Include="Services\MemberResetPasswordService.cs" />
+    <Compile Include="Services\MemberSendResetPasswordEmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
