--- a/Softwarehouse/ObjectCollection/ObjectCollection.csproj
+++ b/Softwarehouse/ObjectCollection/ObjectCollection.csproj
@@ -52,10 +52,13 @@
     <Compile Include="ServiceConditions\MemberEmailRepeatServiceCondition.cs" />
     <Compile Include="ServiceConditions\MemberLoginServiceCondition.cs" />
     <Compile Include="ServiceConditions\MemberResetPasswordServiceCondition.cs" />
+    <Compile Include="ServiceConditions\MemberSendResetPasswordEmailServiceCondition.cs" />
     <Compile Include="ServiceResults\CreateMemberServiceResult.cs" />
     <Compile Include="ServiceResults\MemberAccountRepeatServiceResult.cs" />
     <Compile Include="ServiceResults\MemberEmailRepeatServiceResult.cs" />
     <Compile Include="ServiceResults\MemberLoginServiceResult.cs" />
+    <Compile Include="ServiceResults\MemberResetPasswordServiceResult.cs" />
+    <Compile Include="ServiceResults\MemberSendResetPasswordEmailServiceResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
